update 다운로드 비동기화
